회원가입 페이지 구현

--- a/css/header.css
+++ b/css/header.css
@@ -76,6 +76,7 @@ header .navbar .account{
     height: 50%;
     display: flex;
     cursor: pointer;
+    display: none;
 }
 header .navbar .account .avatar{
     border: 1px solid lightgrey;
