--- a/css/header.css
+++ b/css/header.css
@@ -5,8 +5,10 @@ header{
     box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
-    position: fixed;
+    position: sticky;
     top: 0px;
+    z-index: 10;
+    background-color: var(--main-bg-color);
 }
 header.dark{
     background-color: #333;
