개인정보 페이지 수정

--- a/css/mypage.css
+++ b/css/mypage.css
@@ -64,6 +64,10 @@ main .personal-detail .list-items{
     margin-bottom: 0.5rem;
     display: none;
 }
+main .personal-detail .details.block,
+main .personal-detail .list-items.block{
+    display: block;
+}
 main .personal-detail .details ul li{
     margin: 1rem;
     display: flex;
